--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js && node server/server.js"
+    "start": "node index.js | node server/server.js"
   },
   "author": "alantakashi@gmail.com",
   "license": "MIT",
